# starfire

./: .gitattributes  .gitignore  Cargo.toml  deny.toml  readme.md
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/starfire-audio/: Cargo.toml
crates/starfire-audio/src/: decode.rs  lib.rs  output.rs  rtp.rs
crates/starfire-client/: Cargo.toml
crates/starfire-client/src/: lib.rs
crates/starfire-core/: Cargo.toml
crates/starfire-core/src/: audio.rs  control.rs  discovery.rs  https.rs  input.rs  launch.rs  lib.rs  pairing.rs  rtsp.rs  serverinfo.rs  session.rs  video.rs
crates/starfire-core/src/pairing/: crypto.rs  ladder.rs  mod.rs
crates/starfire-decode/: Cargo.toml
crates/starfire-decode/src/: annexb.rs  frame.rs  lib.rs  select.rs  win_device.rs
crates/starfire-decode/src/backend/: mediafoundation.rs  mod.rs  videotoolbox.rs
crates/starfire-input/: Cargo.toml
crates/starfire-input/src/: lib.rs
crates/starfire-protocol/: Cargo.toml
crates/starfire-protocol/src/: auth.rs  error.rs  hex.rs  lib.rs  wire.rs  xml.rs
crates/starfire-protocol/src/pairing/: identity.rs  mod.rs
crates/starfire-render/: Cargo.toml
crates/starfire-render/src/: d3d11.rs  gpu.rs  lib.rs  metal.rs  yuv.metal  yuv.wgsl
crates/starfire-render/tests/: yuv_conversion.rs
crates/starfire-testkit/: Cargo.toml
crates/starfire-testkit/src/: lib.rs
docs/: 01-overview.md  02-architecture.md  03-bitexact-methodology.md  04-platform-backends.md  05-build-plan.md  06-testing.md  07-performance-budgets.md  08-open-source-and-license.md  README.md  clean-room-policy.md  glossary.md  project-comet.md
docs/protocol/: 00-overview.md  01-discovery.md  02-pairing-and-crypto.md  03-serverinfo-and-negotiation.md  04-applist-and-launch.md  05-rtsp.md  06-control-enet.md  07-video-rtp-fec.md  08-audio-rtp.md  09-input.md
tests/fixtures/: README.md
tests/fixtures/applist/: desktop-steam.meta.toml
tests/fixtures/audio/: stream-opus.fix
tests/fixtures/launch/: desktop-session.meta.toml
tests/fixtures/rtsp/: describe-sdp.meta.toml
tests/fixtures/serverinfo/: http-unpaired.meta.toml
tests/fixtures/video/: stream-hevc.fix
tools/fixture-slicer/: Cargo.toml  README.md
tools/fixture-slicer/src/: l2l4.rs  layers.rs  lib.rs  main.rs  pcap.rs  tcp.rs  testbuild.rs
tools/fixture-slicer/tests/: write_and_load.rs
