# Starfire workspace — clean-room Rust client for the Sunshine GameStream protocol.
# See docs/README.md for the engineering plan and bit-for-bit methodology.
[workspace]
resolver = "2"
members = [
    "crates/starfire-core",
    "crates/starfire-decode",
    "crates/starfire-render",
    "crates/starfire-audio",
    "crates/starfire-input",
    "crates/starfire-testkit",
    "crates/app",
    "tools/fixture-slicer",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Ttimmahlax/starfire"
rust-version = "1.95"

# Shared, permissive-only dependencies. cargo-deny enforces zero GPL/LGPL.
[workspace.dependencies]
thiserror = "2"
tracing = "0.1"
# protocol-core libs (added to crates as their layers land)
reed-solomon-erasure = "6"
sha2 = "0.10"
aes = "0.8"
aes-gcm = "0.10"
quick-xml = "0.36"
rcgen = "0.13"     # self-signed client identity cert (F2)
getrandom = "0.2"  # OS randomness for salt/challenge/secret (F2)
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] } # sign pairing secret (F2)
x509-parser = "0.16" # extract X.509 cert signature bytes for the hash chain (F2)
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] } # mTLS HTTPS (F3)
rustls-pki-types = { version = "1", features = ["std"] } # PEM cert/key parsing (F3)
rusty_enet = "0.4" # reliable-UDP control channel (F6)
# test support
toml = "0.8"
serde = { version = "1", features = ["derive"] }
# render layer (permissive: wgpu/winit are MIT/Apache-2.0). docs/04.
wgpu = "27"
winit = "0.30"
pollster = "0.4"   # block_on for device request + headless readback
bytemuck = { version = "1", features = ["derive"] } # POD uniform structs
# audio layer (permissive: libopus is BSD-3, cpal is Apache-2.0). docs/protocol/08.
audiopus = "=0.3.0-rc.0" # Opus decode (libopus via CMake on all platforms)
cpal = "0.15"      # cross-platform audio output (CoreAudio / WASAPI)

# Lints that encode the baseline rules from docs/01-overview.md.
# Warn (not deny) in Phase 0 so stubs stay green; tighten to deny before Phase 1.
[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
