[package]
name = "starfire-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Audio output behind a trait (cpal); Opus decode + channel layout + A/V sync."

[dependencies]
starfire-core = { path = "../starfire-core" }
thiserror = { workspace = true }
audiopus = { workspace = true } # Opus decode (libopus BSD-3, vendored)
cpal = { workspace = true }     # audio output (CoreAudio / WASAPI)

[lints]
workspace = true
