[package]
name = "starfire-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false # flip to a real version when extracting to the standalone OSS repo
description = "Clean-room Rust protocol core for the Sunshine GameStream wire protocol. No OS, no UI."

[features]
# Exposes wire::assert_roundtrip to other crates' tests (it's always on under
# `cfg(test)` within this crate). Declared so cfg checks are recognized.
test-helpers = []

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
quick-xml = { workspace = true } # /serverinfo + /applist GameStream XML (F1, F3, F4)
sha2 = { workspace = true }      # pairing PIN KDF + challenge hash chain (F2)
aes = { workspace = true }       # AES-128-ECB pairing challenge cipher (F2)
rcgen = { workspace = true }     # self-signed client identity cert (F2)
getrandom = { workspace = true } # OS randomness for salt/challenge/secret (F2)
p256 = { workspace = true }      # ECDSA sign of the pairing secret (F2)
x509-parser = { workspace = true } # extract X.509 signature bytes (F2)
rustls = { workspace = true }    # mTLS HTTPS client for paired endpoints (F3)
rustls-pki-types = { workspace = true } # PEM cert/key parsing (F3)
rusty_enet = { workspace = true } # reliable-UDP control channel (F6)
aes-gcm = { workspace = true }   # AES-GCM control/input/media encryption (F6+)
# Video FEC is a first-party nanors-compatible Cauchy RS (video::fec) — no crate.
# Further protocol-layer deps are added as each layer lands (docs/05-build-plan.md):
#   reed-solomon-erasure, aes-gcm, rusty_enet, rcgen, rsa, x509-parser, rustls…

[dev-dependencies]
starfire-testkit = { path = "../starfire-testkit" }

[lints]
workspace = true
