# starfire-protocol — the shared, direction-agnostic GameStream WIRE layer,
# extracted from starfire-core so the Starfire client and the Comet host
# (../../../comet) depend on the SAME bytes and pair flawlessly by construction.
# Foundation slice: error/wire/hex/xml. The format modules (pairing, rtsp,
# video FEC, input, serverinfo) migrate here incrementally — starfire-core
# re-exports everything meanwhile, so its callers are untouched.
[package]
name = "starfire-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
# Expose wire::assert_roundtrip to downstream test suites (always on under this
# crate's own cfg(test)). starfire-core forwards its `test-helpers` to this.
test-helpers = []

[dependencies]
thiserror = { workspace = true }
quick-xml = { workspace = true } # flat GameStream XML envelopes (xml::parse_flat)
# pairing crypto (shared client+host): PIN challenge, identity cert, signatures
sha2 = { workspace = true }
aes = { workspace = true }
getrandom = { workspace = true }
rcgen = { workspace = true }
p256 = { workspace = true }
x509-parser = { workspace = true }
