[package]
name = "starfire-render"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Present + fullscreen + HDR + frame pacing behind a trait (Metal / D3D11 / wgpu)."

[dependencies]
starfire-decode = { path = "../starfire-decode" }
thiserror = { workspace = true }

[lints]
workspace = true
