[package]
name = "starfire-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Test harness for Starfire: fixture loading, golden byte-equality, loss injection."

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
